# fixed-staking

./: Anchor.toml  readme.md
.github/actions/setup/: action.yaml
.github/actions/setup-anchor/: action.yaml
.github/actions/setup-ts/: action.yaml
.github/workflows/: build.yaml
cli/: Cargo.toml
cli/src/: main.rs
programs/staking/: Cargo.toml
programs/staking/src/: errors.rs  events.rs  lib.rs
programs/staking/src/instructions/: claim.rs  close.rs  create_user.rs  free_pool.rs  free_user.rs  initialize.rs  mod.rs  open.rs  pause.rs  stake.rs  unpause.rs  unstake.rs  withdraw.rs
programs/staking/src/state/: pool.rs  user.rs
tests/: basic_staking.ts  free_user_pool.ts  general.ts  one_user_real.ts  one_user_simple.ts  utils.ts  withdraw.ts
tests/keys/: mint.json
